[package]
name = "rtlib"
version = "0.0.1"
authors = ["Rene Zeto <rwzeto@gmail.com>"]
edition = "2018"

[lib]
name = "rtlib"
crate-type = ["cdylib"]

[[bin]]
name = "rtlib_test"
path = "src/main.rs"

[dependencies]
nalgebra = "0.21.1"
regex = "1.3.9"

[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]